--- a/map/index.html
+++ b/map/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <script src="https://d3js.org/d3.v3.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.1/leaflet.js"></script>
     <script src="https://cdn.rawgit.com/teralytics/Leaflet.D3SvgOverlay/master/L.D3SvgOverlay.js"></script>
     <script src="../utils/utils.js"></script>
     <script src="world-countries.js"></script>
     <script src="map-component.js"></script>
-    <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.1/leaflet.css" />
     <style>
     .map {
         width: 1024px;
