remove hardcoded api key from component

--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -145,6 +145,8 @@
         - el and container -> parent
     */
 
+    datahub.data.setApiKey('0f58fe2540fa4cf19a4aa68f290fd148')
+
     datahub.map.rasterMap({
             parent: document.querySelector('.map-light'),
             showLabels: false,
