--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -131,10 +131,23 @@
             <div class="description">A time slider is used to zoom in a timeseries.</div>
         </div>
     </div>
+    <div class="row widget">
+        <div class="col-xs-12 col-md-7">
+            <div class="row">
+                <div class="number-widget big col-xs"></div>
+                <div class="number-widget medium col-xs"></div>
+                <div class="number-widget small col-xs"></div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-5">
+            <div class="description">A number widget comes in 3 sizes. It can have a title, a value and some info.</div>
+        </div>
+    </div>
+
     <script>
     /**/
     /*
-        upgrades:
+        changelog:
         - d3v4 scales
         - which scale as rgb, uses custom parser
         - default imagePath
@@ -143,6 +156,7 @@
         - flattenAndUniquify -> arrayStats
         - zoom is in mapConfig.zoom
         - el and container -> parent
+        - datahub.data.setApiKey
     */
 
     datahub.data.setApiKey('0f58fe2540fa4cf19a4aa68f290fd148')
@@ -286,6 +300,26 @@
 
         renderMainChart(timeseriesSlice)
     })
+
+    datahub.chart.number({
+        parent: document.querySelector('.number-widget.big'),
+        title: 'NET PRODUCTION',
+        value: '236,43GWh',
+        info: 'Plan: 231,64GWh'
+    })
+
+    datahub.chart.number({
+        parent: document.querySelector('.number-widget.medium'),
+        value: '236,43GWh',
+        info: 'Net Production'
+    })
+
+    datahub.chart.number({
+        parent: document.querySelector('.number-widget.small'),
+        value: '16,00%',
+        info: 'MTD Actual'
+    })
+
 
 
     // var heightSelector = datahub.chart.buttonGroup({
