table widget; simplified panel

--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -17,11 +17,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" />
     <link rel="stylesheet" href="../style/components.css" />
     <style>
-
     body {
         font-family: Tahoma, sans-serif;
     }
-
+    
     div {
         /*border: 1px solid silver;*/
     }
@@ -62,7 +61,7 @@
         max-width: 64em;
         margin: 0 auto 60px auto;
         border-top: 1px solid silver;
-        padding-top: 20px; 
+        padding-top: 20px;
     }
     </style>
 </head>
@@ -143,7 +142,16 @@
             <div class="description">A number widget comes in 3 sizes. It can have a title, a value and some info.</div>
         </div>
     </div>
-
+    <div class="row widget">
+        <div class="col-xs-12 col-md-7">
+            <div class="row">
+                <div class="table-widget big col-xs"></div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-5">
+            <div class="description">A table can be sorted.</div>
+        </div>
+    </div>
     <script>
     /**/
     /*
@@ -320,6 +328,32 @@
         info: 'MTD Actual'
     })
 
+    datahub.chart.table({
+        parent: document.querySelector('.table-widget'),
+        elements: [
+            ['Spain', 1, 2],
+            ['Germany', 7, 8],
+            ['United Kingdom', 1, 2],
+            ['Poland', 7, 8],
+            ['Netherlands', 1, 2],
+            ['Italy', 7, 8],
+        ],
+        metadata: [{
+            key: 'country',
+            label: 'Country',
+            sortable: true
+        }, {
+            key: 'production',
+            label: 'production',
+            units: 'MWh',
+            sortable: true
+        }, {
+            key: 'revenues',
+            label: 'Revenues',
+            units: 'M€'
+        }]
+    })
+
 
 
     // var heightSelector = datahub.chart.buttonGroup({
@@ -359,7 +393,6 @@
     //         unit: 'm/s'
     //     }]
     // })
-
     </script>
 </body>
 
